--- a/Project1/src/main/webapp/partials/register.html
+++ b/Project1/src/main/webapp/partials/register.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="container" id="register-container">
+	<form class="form" id="registration-form">
+	    <h3>Reimbursement Portal Enrollment</h3>
+	    <div class="form-group">
+	        <label for="fn">First name</label> 
+	        <input type="text" class="form-control" id="fn" placeholder="Enter your first name" required>
+	    </div>
+	    <div class="form-group">
+	        <label for="password">Last name</label> 
+	        <input type="text" class="form-control" id="ln" placeholder="Enter your last name" required>
+	    </div>
+	    <div class="form-group">
+	        <label for="password">Email Address</label> 
+	        <input type="email" class="form-control" id="email" placeholder="Enter your email address" required>
+	    </div>
+	    <div class="form-group">
+	        <label for="password">Username</label> 
+	        <input type="text" class="form-control" id="reg-username" placeholder="Enter your desired username" required>
+	    </div>
+	    <div class="form-group">
+	        <label for="password">Password</label> 
+	        <input type="password" class="form-control" id="reg-password" placeholder="Enter your password" required>
+	    </div>
+	    <button type="submit" class="btn btn-outline-success muh-button" id="register">Register</button>
+	    <br>
+	    <div class="alert alert-danger text-center" id="reg-message"></div>
+    </form>
+</div>
