Work from tonight

--- a/Project1/src/main/webapp/partials/register.html
+++ b/Project1/src/main/webapp/partials/register.html
@@ -21,6 +21,13 @@
 	        <label for="password">Password</label> 
 	        <input type="password" class="form-control" id="reg-password" placeholder="Enter your password" required>
 	    </div>
+	    <div>
+	    	<label for="user-role">Select Your Role</label>
+	    	<select style="margin-bottom: 10%" class="form-control" id="user-role">
+	    		 <option>Author</option>
+	    		 <option>Resolver</option>
+	    	</select>
+	    </div>
 	    <button type="submit" class="btn btn-outline-success muh-button" id="register">Register</button>
 	    <br>
 	    <div class="alert alert-danger text-center" id="reg-message"></div>
