Added request history functionality

--- a/Project1/src/main/webapp/css/index.css
+++ b/Project1/src/main/webapp/css/index.css
@@ -22,3 +22,11 @@
 	margin-left: 3%;
 	margin-right: 3%
 }
+
+#title{
+	text-align: center;
+}
+
+#submit-new-req-btn, #req-history-btn {
+	width: 49%
+}
