--- a/Project1/src/main/webapp/partials/authorhome.html
+++ b/Project1/src/main/webapp/partials/authorhome.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-	<h1>Author Home</h1>
-</body>
-</html>
+<div class="container" id="home-container">
+	<div id="authorhome-page">
+		<h1>Author Home</h1>
+		<br>
+		<h1 class="display-4" id="title">Welcome back <span id="user_fn"></span>!</h1>
+		<br>
+		<h4 id="title">Please select an option below.</h4>
+		<br>
+		<div id="author-menu">
+			<button type="button" class="btn btn-success btn-lg" id="submit-new-req-btn">Submit New Reimbursement</button>
+			<button type="button" class="btn btn-success btn-lg" id="req-history-btn">View Request History</button>
+		</div>
+
+		<hr>
+
+	</div>
+</div>
