Added new ticket form

--- a/Project1/src/main/webapp/partials/createticket.html
+++ b/Project1/src/main/webapp/partials/createticket.html
@@ -1,10 +1,42 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
+<div class="container" id="home-container">
+	<div id="author-create-ticket">
+		<h1 class="display-4" id="title">Create New Ticket</h1>
+		<br>
+		<div>
+			<form>
+				<div class="form-group">
+					<label for="amount-input">Amount</label> <input type="number"
+						class="form-control" id="amount" placeholder="Enter amount" step="0.01">
+					<small id="amount" class="form-text text-muted">Please
+						enter a valid $xx.xx amount.</small>
+				</div>
+				<div class="form-group">
+					<label for="description-input">Description</label> <input
+						type="text" class="form-control" id="description-input"
+						placeholder="Description">
+				</div>
+				<div class="form-group">
+					<label for="type-input">Type</label>
+					<select class="form-control" id="type-input">
+						<option>Food</option>
+						<option>Lodging</option>
+						<option>Travel</option>
+						<option>Other</option>
+					</select>
+				</div>
+				<button type="submit" class="btn btn-outline-success" id="submit-request">Submit</button>
+				<hr>
+			</form>
+		</div>
 
-</body>
-</html>
+		<br>
+
+		<div id="author-menu">
+			<button type="button" class="btn btn-success btn-block"
+				id="author-return-home">Return To Home Page</button>
+		</div>
+
+		<hr>
+
+	</div>
+</div>
