Adding work form tonight

--- a/Project1/src/main/webapp/partials/createticket.html
+++ b/Project1/src/main/webapp/partials/createticket.html
@@ -31,12 +31,14 @@
 
 		<br>
 
-		<div id="author-menu">
+		<div id="author-return-home-div">
 			<button type="button" class="btn btn-success btn-block"
 				id="author-return-home">Return To Home Page</button>
 		</div>
 
 		<hr>
+		
+		<div class="alert alert-danger text-center" id="reg-message"></div>
 
 	</div>
 </div>
