Added View History and New Reimbursement

--- a/Project1/src/main/webapp/partials/authorhome.html
+++ b/Project1/src/main/webapp/partials/authorhome.html
@@ -1,4 +1,4 @@
-<div class="container" id="home-container">
+<div class="container" id="author-home-container">
 	<div id="authorhome-page">
 		<h1>Author Home</h1>
 		<br>
