Small update to create new request functionality

--- a/Project1/src/main/webapp/partials/createticket.html
+++ b/Project1/src/main/webapp/partials/createticket.html
@@ -26,8 +26,9 @@
 		<div class="text-success" id="reimbursement_success_message" hidden=true></div>
     </form>
     <br>
- <button type="submit" type="button" class="btn btn-outline-success" id="submit-request">Submit</button>
-		<div id="author-return-home-div">
+ <button style="margin-bottom: 3%;" type="submit" type="button" class="btn btn-outline-success" id="submit-request">Submit</button>
+
+		<div id="author-return-home-div"> 
 			<button type="button" class="btn btn-success btn-block"
 				id="author-return-home_Create_Reimb">Return To Home Page</button>
 		</div>
