--- a/Project1/src/main/webapp/partials/resolverhome.html
+++ b/Project1/src/main/webapp/partials/resolverhome.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-	<h1>Resolver Home</h1>
-</body>
-</html>
+<div class="container" id="resolover_home_container">
+	<div id="resolver_home_page">
+		<h1>Resolver Home</h1>
+		<br>
+		<h1 class="display-4" id="title">Welcome back <span id="resolver_fn"></span>!</h1>
+		<br>
+		<h4 id="title">Please select an option below.</h4>
+		<br>
+		<div id="author-menu">
+			<button type="button" class="btn btn-success btn-lg" id="view-pending-btn">View Pending Requests</button>
+			<button type="button" class="btn btn-success btn-lg" id="submit-new-req-btn">Submit New Reimbursement</button>
+		</div>
+
+		<hr>
+
+	</div>
+</div>
