adding changes made tonight

--- a/Project1/src/main/webapp/partials/ResolverViewRequests.html
+++ b/Project1/src/main/webapp/partials/ResolverViewRequests.html
@@ -2,17 +2,9 @@
 	<div id="resolver-view-requests">
 		<h1 class="display-4" id="title">Reimbursement history</h1>
 		<br>
-		<div>
-			<select >
-				<option></option>
-				<option></option>
-				<option></option>
-				<option>View Denied Requests</option>
-			</select>
-		</div>
 		
 		<div class="dropdown" id="change_status_dropdown">
-  			<a class="btn btn-success dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  			<a class="btn btn-success dropdown-toggle" href="#" role="button" id="filter_dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
    				 Filter Reimbursements
   			</a>
 
