Basic Functionality is complete

--- a/Project1/src/main/webapp/partials/ResolverViewRequests.html
+++ b/Project1/src/main/webapp/partials/ResolverViewRequests.html
@@ -17,7 +17,7 @@
 		</div>
 		
 		<div>
-			<table class="table" id="author-past-requests-table">
+			<table class="table" id="resolver-view-table">
 			
 			<thead>
 				<tr>
@@ -35,7 +35,7 @@
 				</tr>
 			</thead>
 			
-			<tbody id="view_reimbursement_table_body"></tbody>
+			<tbody id="resolver_view_reimbursement_table_body"></tbody>
 			
 		</table>
 		</div>
