--- a/Project1/src/main/webapp/partials/authorpastrequests.html
+++ b/Project1/src/main/webapp/partials/authorpastrequests.html
@@ -22,7 +22,7 @@
 				</tr>
 			</thead>
 			
-			<tbody id="past_request_table_body"></tbody>
+			<tbody id="author_past_reimbursements_table_body"></tbody>
 			
 		</table>
 		</div>
