added some styling

--- a/Project1/src/main/webapp/partials/login.html
+++ b/Project1/src/main/webapp/partials/login.html
@@ -1,6 +1,6 @@
 <div id="login-container">
 	<div class="form" id="login-form">
-		<h2>NotBad</h2>
+		<h2>Welcome</h2>
 		<hr>
 		<h3>Employee Sign In</h3>
 		
