adding updates to app.js and validation

--- a/Project1/src/main/webapp/partials/ResolverViewRequests.html
+++ b/Project1/src/main/webapp/partials/ResolverViewRequests.html
@@ -44,7 +44,7 @@
 		</div>
 		
 		<hr>
-	<div class="alert alert-danger" id="error-requests-message" hidden></div>
+	<div class="alert alert-danger" id="error-requests-message" hidden="true"></div>
 
 	</div>
 </div>
