--- a/Project1/src/main/webapp/partials/resolverhome.html
+++ b/Project1/src/main/webapp/partials/resolverhome.html
@@ -1,6 +1,6 @@
 <div class="container" id="resolover_home_container">
 	<div id="resolver_home_page">
-		<h1 class="display-4" id="title">Welcome back <span id="resolver_fn"></span>!</h1>
+		<h1 class="display-4" id="title">Welcome back <span id="user_fn"></span>!</h1>
 		<br>
 		<h4 id="title">Please select an option below.</h4>
 		<br>
